--- a/index.html
+++ b/index.html
@@ -20,25 +20,167 @@
         <div>
             <nav class="navbar">
                 <a href="#home"><img src="images/ccm.ico" alt="Logo"></a>
-                <h1> CryptoCurrency Market</h1>
+                <h1 class="home"> CryptoCurrency Market</h1>
                 <ul>
-                    <li><a href="#cryptocurrencies">Crypto Currrencies</a></li>
-                    <li><a href="#borsalar">Borsalar</a></li>
-                    <li><a href="#grafikler">Grafikler</a></li>
+                    <nav class="categories">
+                        <li><a href="#cryptocurrencies">Crypto Currrencies</a></li>
+                        <li><a href="#borsalar">Borsalar</a></li>
+                        <li><a href="#grafikler">Grafikler</a></li>
+                    </nav>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section id="cryptocurrencies"></section>
+    <section id="cryptocurrencies">
+        <h1>Crypto Currencies</h1>
+        <div>
+            <table>
+                <colgroup>
+                    <col style="width:50px;min-width:auto">
+                    <col style="width:50px;min-width:auto">
+                    <col style="width:250px;min-width:auto">
+                    <col>
+                    <col style="width:84px;min-width:auto">
+                    <col style="width:84px;min-width:auto">
+                    <col style="width:200px;min-width:auto">
+                    <col style="width:200px;min-width:auto">
+                    <col style="width:200px;min-width:auto">
+                    <col>
+                    <col style="width:50px;min-width:auto">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th class="stickyTop"></th>
+                        <th class="stickyTop" style="text-align:left">
+                            <div>
+                                <div>
+                                    <p font-size="0" color="text">#</p>
+                                    <span class="icon-Caret-up" style="margin-left:4px"></span>
+                                </div>
+                            </div>
+                        </th>
+                        <th class="stickyTop" style="text-align:left">
+                            <div>
+                                <div>
+                                    <p font-size="0" color="text">Name</p>
+                                </div>
+                            </div>
+                        </th>
+                        <th class="stickyTop">
+                            <div>
+                                <div>
+                                    <p font-size="0" color="text">Price</p>
+                                </div>
+                            </div>
+                        </th>
 
-    <section id="borsalar"></section>
+                        <th class="stickyTop" style="text-align:right">
+                            <div>
+                                <div>
+                                    <p font-size="0" color="text">Market Cap</p>
+                                </div>
+                                <div aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                        height="16" width="16" viewBox="0 0 24 24" color="neutral4">
+                                        <path
+                                            d="M12 2C6.48583 2 2 6.48583 2 12C2 17.5142 6.48583 22 12 22C17.5142 22 22 17.5142 22 12C22 6.48583 17.5142 2 12 2ZM14.215 17.2367C13.6642 17.4533 11.755 18.365 10.655 17.3958C10.3267 17.1075 10.1633 16.7417 10.1633 16.2975C10.1633 15.4658 10.4367 14.7408 10.9292 13C11.0158 12.6708 11.1217 12.2442 11.1217 11.9058C11.1217 11.3217 10.9 11.1667 10.2992 11.1667C10.0058 11.1667 9.68083 11.2708 9.38667 11.3808L9.54917 10.715C10.205 10.4483 11.0283 10.1233 11.7333 10.1233C12.7908 10.1233 13.5692 10.6508 13.5692 11.6542C13.5692 11.9433 13.5192 12.45 13.4142 12.8L12.8058 14.9517C12.68 15.3867 12.4525 16.3458 12.805 16.63C13.1517 16.9108 13.9725 16.7617 14.3775 16.5708L14.215 17.2367ZM13.21 8.66667C12.52 8.66667 11.96 8.10667 11.96 7.41667C11.96 6.72667 12.52 6.16667 13.21 6.16667C13.9 6.16667 14.46 6.72667 14.46 7.41667C14.46 8.10667 13.9 8.66667 13.21 8.66667Z">
+                                        </path>
+                                    </svg></div>
+                            </div>
+                        </th>
 
-    <section id="grafikler"></section>
+                        <th class="stickyTop" style="text-align:right">
+                            <div>
+                                <div>
+                                    <p font-size="0" color="text">Circulating Supply</p>
+                                </div>
+                                <div aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                        height="16" width="16" viewBox="0 0 24 24" color="neutral4"
+                                        class="sc-16r8icm-0 jDSVfX">
+                                        <path
+                                            d="M12 2C6.48583 2 2 6.48583 2 12C2 17.5142 6.48583 22 12 22C17.5142 22 22 17.5142 22 12C22 6.48583 17.5142 2 12 2ZM14.215 17.2367C13.6642 17.4533 11.755 18.365 10.655 17.3958C10.3267 17.1075 10.1633 16.7417 10.1633 16.2975C10.1633 15.4658 10.4367 14.7408 10.9292 13C11.0158 12.6708 11.1217 12.2442 11.1217 11.9058C11.1217 11.3217 10.9 11.1667 10.2992 11.1667C10.0058 11.1667 9.68083 11.2708 9.38667 11.3808L9.54917 10.715C10.205 10.4483 11.0283 10.1233 11.7333 10.1233C12.7908 10.1233 13.5692 10.6508 13.5692 11.6542C13.5692 11.9433 13.5192 12.45 13.4142 12.8L12.8058 14.9517C12.68 15.3867 12.4525 16.3458 12.805 16.63C13.1517 16.9108 13.9725 16.7617 14.3775 16.5708L14.215 17.2367ZM13.21 8.66667C12.52 8.66667 11.96 8.10667 11.96 7.41667C11.96 6.72667 12.52 6.16667 13.21 6.16667C13.9 6.16667 14.46 6.72667 14.46 7.41667C14.46 8.10667 13.9 8.66667 13.21 8.66667Z">
+                                        </path>
+                                    </svg></div>
+                            </div>
+                        </th>
+                        <th class="stickyTop" style="text-align:right">
+                            <p style="font-size:12px" color="text" font-size="1">Last 7 Days
+                            </p>
+                        </th>
+                        <th class="stickyTop"></th>
+                    </tr>
+                </thead>
 
+                <tbody>
+                    <tr>
+                        <td><span><span class="icon-Star"></span></span></td>
+                        <td style="text-align:left">
+                            <p color="text2" font-size="0">1</p>
+                        </td>
+                        <td style="text-align:left">
+                            <div display="flex"><a href="/currencies/bitcoin/" class="cmc-link">
+                                    <div><img class="coin-logo"
+                                            src="https://s2.coinmarketcap.com/static/img/coins/64x64/1.png">
+                                        <div>
+                                            <p font-weight="semibold" color="text" font-size="1">Bitcoin</p>
+                                            <div>
+                                                <div>1</div>
+                                                <p color="text3" font-size="1">
+                                                    BTC</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="price___3rj7O "><a href="/currencies/bitcoin/markets/"
+                                    class="cmc-link">$54,197.86</a></div>
+                        </td>
+                        <td style="text-align:right"><span>
+                                <span></span>0.57
+                                <!-- -->%
+                            </span></td>
+                        <td style="text-align:right">
+                            <div>
+                                <div>
+                                    <div><span class="icon-Info"></span></div>
+                                    <p font-size="1" font-weight="medium" color="text">
+                                        18,693,281 BTC</p>
+                                </div>
+                                <div width="160">
+                                    <div width="143"></div>
+                                </div>
+                            </div>
+                        </td>
+                        <td style="text-align:right"><a href="/currencies/bitcoin/" class="cmc-link"><img
+                                    src="https://s3.coinmarketcap.com/generated/sparklines/web/7d/usd/1.png"
+                                    alt="1-price-graph"></a></td>
+                        <td>
+                            <div aria-expanded="false">
+                                <button><span class="icon-More-Vertical"></span></button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
-    <footer></footer>
+    <section id="borsalar">
+        <h1> Borsalar </h1>
+        <div class="Borsalar-Image">
+            <img src="images/btcturk-binance-paribu.jpg" alt="">
+            <span></span>
+        </div>
+    </section>
 
+    <section id="grafikler">
+        <h1> Grafikler </h1>
+        <div class="Grafikler">
+            <img src="images/kripto-para-borsalari.jpg" alt="">
+        </div>
+    </section>
 
     <script src="script.js" type="text/javascript"></script>
 
